# streamlit_labs

./: .gitignore  01_basic.py  02_basic.py  03_basic.py  04_basic.py  05_basic.py  06_interactive.py  07_multiselect_slider.py  08_input_uploader.py  09_layout.py  10_covid19.py  11_kospi_notebook.ipynb  12_kospi_notebook.ipynb  13_kospi.py  m02_day02_EDA.ipynb  m02_day02_ML_Basic.ipynb  m02_day03_260518.ipynb  m02_day03_titanic.ipynb  main.py  naver_news_simple_gui.py  pyproject.toml  네이버_시가총액상위_코스닥.xlsx  파이썬종강_.py
files/: step1_naver_news_excel.py  step2_bonus_gui.py  네이버_IT뉴스.xlsx
files_2/: step1_naver_news_excel.py  step2_bonus_gui.py  네이버_IT뉴스.xlsx
