[project]
name = "streamlit-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "finance-datareader>=0.9.110",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyqt6>=6.11.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
